# Books-Search-Engine-and-Recommendation-System

./: README.md  docker-compose.yml
client/: Dockerfile  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
client/.dist/: bundle.min.css  bundle.min.js  index.html
server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.py
server/research/: 0.clean_dataset.ipynb  1.add_descriptions.ipynb  2.add_new_books.ipynb  3.exploratory_data_analysis.ipynb  4.experiment.ipynb
server/src/: modeling.py  preprocessing.py  scraping.py
server/web/: routes.py
